OLMIS-1167: Updated select in losses and adjustments modal

--- a/src/main/webapp/public/requisitions/requisition/losses-and-adjustments/losses-and-adjustments-modal.html
+++ b/src/main/webapp/public/requisitions/requisition/losses-and-adjustments/losses-and-adjustments-modal.html
@@ -2,11 +2,10 @@
 <form class="form-filter" ng-submit="vm.addAdjustment()">
     <div class="form-group">
         <label for="reason">{{'label.equipment.maintenance.request.reason' | message}}</label>
-        <openlmis-select id="reason"
-                         ng-model="vm.adjustment.reason"
-                         items="vm.reasons"
-                         field-displayed="name"
-                         track-by="name"/>
+        <select id="reason"
+         ng-model="vm.adjustment.reason"
+         ng-options="reason as reason.name for reason in vm.reasons"
+         ></select>
     </div>
     <div class="form-group">
         <label for="quantity">{{'label.quantity' | message}}</label>
