OLMIS-1122: login controller/service is nowe extensible
- remove duplicated login code using events
- added LoginController directly to the login form
- 'auth.login' event moved from loginController to loginService

--- a/src/main/webapp/public/auth/login-form.html
+++ b/src/main/webapp/public/auth/login-form.html
@@ -13,7 +13,7 @@
       <openlmis-locale class="locale-container" />
   </div>
 
-  <div class="login-form">
+  <div class="login-form" ng-controller="LoginController">
       <h2 id="signInLabel" openlmis-message="label.sign.in"></h2>
 
       <form ng-submit="doLogin()" novalidate>
