OLMIS-1233 FEOLMIS-616: Modified convert to order to be a service
* updated convert to order to use modal pattern
* remove placeholder

--- a/src/main/webapp/public/requisitions/requisition-toolbar.html
+++ b/src/main/webapp/public/requisitions/requisition-toolbar.html
@@ -27,10 +27,9 @@
                openlmis-message="button.rnr.reject"
                ng-if="displayApproveAndReject()"
                ng-click="rejectRnr()"/>
-        <div ng-if="displayConvertToOrder()"
-             convert-one-rnr-to-order
-             requisition="requisition"
-             requisitions="requisitions">
-        </div>
+        <input type="button" ng-if="displayConvertToOrder()"
+               class="btn btn-primary primary-action"
+               ng-click="convertRnr()"
+               openlmis-message="button.convert.to.order"/>
     </div>
 </div>
