OLMIS-1299: Improved markup in forms HTML

--- a/src/main/webapp/public/requisitions/requisition/convert-one-rnr-to-order/convert-one-rnr-to-order-modal.html
+++ b/src/main/webapp/public/requisitions/requisition/convert-one-rnr-to-order/convert-one-rnr-to-order-modal.html
@@ -1,15 +1,18 @@
 <form name="convertForm" ng-submit="convertRnr()">
-    <label for="searchWarehouses">{{'label.filter.warehouses' | message}}</label>
-    <input id="searchWarehouses" type="text" ng-model="searchText"/>
-    <div class="form-group depots">
-        <label for="radioBtn" ng-repeat="depot in requisitionWithDepots.supplyingDepots |
+    <div class="form-group">
+      <label for="searchWarehouses">{{'label.filter.warehouses' | message}}</label>
+      <input id="searchWarehouses" type="text" ng-model="searchText"/>
+    </div>
+    <fieldset class="form-group depots">
+        <legend>{{'requisition.converttoorder.pickdepot' | message}}</legend>
+        <label ng-repeat="depot in requisitionWithDepots.supplyingDepots |
                filter:searchText"
                class="radio" >
-            <input id="radioBtn" type="radio" name="radioBtn" ng-value="depot.id"
+            <input type="radio" name="radioBtn" ng-value="depot.id"
                    ng-model="requisition.supplyingFacility"/>
             {{depot.name}}
         </label>
-    </div>
+    </fieldset>
     <button class="convert-rnr" type="submit" ng-click="close()">
         {{'button.convert.to.order' | message}}</button>
 </form>
