--- a/src/main/webapp/public/requisitions/init.html
+++ b/src/main/webapp/public/requisitions/init.html
@@ -17,7 +17,8 @@
       <label for="facilityName" openlmis-message="label.requisition.facilityName"></label>
       <select id="facilityName" disabled
         ng-model="selectedFacilityId"
-        ng-options="facility.id as facility.name for facility in facilities" >
+        ng-options="facility.id as facility.name for facility in facilities"
+        placeholder="label.select.facility" >
       </select>
     </div>
     <div class="form-group">
@@ -25,7 +26,8 @@
       <select
         id="programListMyFacility"
         ng-model="selectedProgram"
-        ng-options="program as program.name for program in programs" >
+        ng-options="program as program.name for program in programs"
+        placeholder="{{'label.select.program' | message}}" >
       </select>
     </div>
     <fieldset class="form-group">
