OLMIS-1233 FEOLMIS-616: Update message to use camelCase

--- a/src/main/webapp/public/requisitions/requisition/convert-to-order-modal/convert-to-order-modal.html
+++ b/src/main/webapp/public/requisitions/requisition/convert-to-order-modal/convert-to-order-modal.html
@@ -4,7 +4,7 @@
       <input id="searchWarehouses" type="text" ng-model="searchText"/>
     </div>
     <fieldset class="form-group depots">
-        <legend>{{'requisition.converttoorder.pickdepot' | message}}</legend>
+        <legend>{{'requisition.convertToOrder.pickDepot' | message}}</legend>
         <label ng-repeat="depot in requisitionWithDepots.supplyingDepots |
                filter:searchText"
                class="radio" >
