--- a/src/main/webapp/public/requisitions/requisition/losses-and-adjustments/losses-and-adjustments-modal.html
+++ b/src/main/webapp/public/requisitions/requisition/losses-and-adjustments/losses-and-adjustments-modal.html
@@ -12,9 +12,7 @@
         <input id="quantity"
                class="form-control"
                ng-model="vm.adjustment.quantity"
-               type="number"
-               min="0"
-               required />
+               required positive-integer/>
     </div>
     <div class="form-group">
         <button class="btn btn-primary" type="submit">
@@ -37,8 +35,7 @@
             <input id="adjustment-quantity-{{$index}}"
                    class="form-control"
                    ng-model="adjustment.quantity"
-                   type="number"
-                   min="0"/>
+                   required positive-integer />
             <button class="btn btn-danger" ng-click="vm.removeAdjustment(adjustment)">
                 {{'button.remove' | message}}
             </button>
