OLMIS-1374: Made NavigationService respect state access rights

--- a/src/main/webapp/public/dashboard/navigation.html
+++ b/src/main/webapp/public/dashboard/navigation.html
@@ -1,7 +1,7 @@
 <ul>
-    <li ng-repeat="state in states" ng-class="{'dropdown':hasChildStates(state), 'dropdown-submenu':isSubmenu(state)}" uib-dropdown>
-      	<a ng-if="hasChildStates(state)" class="dropdown-toggle" uib-dropdown-toggle openlmis-message="NavigationCtrl.getStateLabel(state)"></a>
-        <a ng-if="!hasChildStates(state)" ui-sref="{{state}}" openlmis-message="NavigationCtrl.getStateLabel(state)"></a>
-        <openlmis-navigation ng-if="hasChildStates(state)" class="dropdown-menu" uib-dropdown-menu root-state="state"></openlmis-navigation>
+    <li ng-repeat="state in vm.states" ng-class="{'dropdown':vm.hasChildren(state), 'dropdown-submenu':vm.isSubmenu(state)}" uib-dropdown ng-if="vm.shouldDisplay(state)">
+        <a ng-if="vm.hasChildren(state)" class="dropdown-toggle" uib-dropdown-toggle>{{state.label | message}}</a>
+        <a ng-if="!vm.hasChildren(state)" ui-sref="{{state.name}}">{{state.label | message}}</a>
+        <openlmis-navigation ng-if="vm.hasChildren(state)" class="dropdown-menu" uib-dropdown-menu states="state.children"></openlmis-navigation>
     </li>
 </ul>
