OLMIS-1348 Standardize action button for all forms
To standardize the UI, all forms should have at least one button to show action for the form. If the action button is conditional, remove the condition. If it can be disabled, remove that. Since the approval page form is different from the rest and it does not seem to work, remove it for now; it can be re-added once we know we need it.

--- a/src/main/webapp/public/requisitions/init.html
+++ b/src/main/webapp/public/requisitions/init.html
@@ -41,7 +41,9 @@
         <input type="radio" ng-model="emergency" ng-value="true" />
       </label>
     </fieldset>
-    <input type="submit" value="{{'button.search'|message}}" />
+    <div class="form-group">
+      <input type="submit" value="{{'button.search'|message}}" class="btn btn-primary" />
+    </div>
   </form>
   <div ng-show="selectedProgram && selectedFacilityId && periodGridData && !(periodGridData.length == 0)"
     ui-grid="periodGridOptions"
