--- a/src/main/webapp/public/requisitions/requisition-search/requisition-search.html
+++ b/src/main/webapp/public/requisitions/requisition-search/requisition-search.html
@@ -44,8 +44,7 @@
         <div class="form-group">
             <input id="searchButton" ng-click="search()"
                 class="btn btn-primary"
-                openlmis-message="button.search" type="button"
-                ng-if="selectedFacility"/>
+                openlmis-message="button.search" type="button"/>
         </div>
     </form>
     <div id="requisitionViewList" 
