--- a/src/main/webapp/public/requisitions/requisition/add-product/add-product-modal.html
+++ b/src/main/webapp/public/requisitions/requisition/add-product/add-product-modal.html
@@ -17,6 +17,6 @@
 		<label for="requestedQuantity">{{'placeholder.explanation' | message}}</label>
 		<input class="form-control" ng-model="requestedQuantityExplanation" ng-required="requestedQuantity">
 	</div>
-	<input class="add-product" type="submit" ng-disabled="!addProductForm.$valid" value="{{'button.add' | message}}"></button>
+	<input class="add-product" type="submit" value="{{'button.add' | message}}"></button>
 	<button type="button" data-dismiss="modal" class="cancel">{{'button.cancel' | message}}</button>
 </form>
