--- a/src/main/webapp/public/common/grid/emergency-cell.html
+++ b/src/main/webapp/public/common/grid/emergency-cell.html
@@ -1,3 +1,3 @@
-<div class="ngCellText checked">
+<div class="ngCellText checked col-emergency">
 	<i ng-class="{'icon-ok': row.entity.emergency}"></i>
 </div>
