OLMIS-1416: Remove unnecessary slashes from html

--- a/src/main/webapp/public/requisitions/convert-to-order/convert-to-order.html
+++ b/src/main/webapp/public/requisitions/convert-to-order/convert-to-order.html
@@ -41,7 +41,7 @@
 						</select>
 					</td>
 					<td class="col-emergency">
-						<i ng-class="{\'icon-ok\': item.requisition.emergency}"></i>
+						<i ng-class="{'icon-ok': item.requisition.emergency}"></i>
 					</td>
 				</tr>
 			</tbody>
