--- a/src/main/webapp/public/requisitions/requisition-search/requisition-search.html
+++ b/src/main/webapp/public/requisitions/requisition-search/requisition-search.html
@@ -1,55 +1,80 @@
 <div class="page">
-    <h2 openlmis-message="header.view.requisitions"></h2>
+    <h2>{{'header.view.requisitions' | message}}</h2>
     <form class="form-filter">
         <div class="form-group">
-            <label for="facility" openlmis-message="label.requisition.facilityName"></label>
+            <label for="facility">{{'label.requisition.facilityName' | message}}</label>
             <select
                 id="facility"
-                placeholder="{{'label.select.facility'|message}}"
-                ng-change="loadPrograms()"
-                ng-model="selectedFacility"
-                ng-options="facility as facility.name for facility in facilities"
-                ng-required
-                >
+                placeholder="{{'label.select.facility' | message}}"
+                ng-change="vm.loadPrograms()"
+                ng-model="vm.selectedFacility"
+                ng-options="facility as facility.name for facility in vm.facilities"
+                ng-required>
             </select>
         </div>
         <div class="form-group">
-            <label for="program" openlmis-message="label.program"></label>
+            <label for="program">{{'label.program' | message}}</label>
             <select
                 id="program"
-                placeholder="{{'label.select.program'|message}}"
+                placeholder="{{'label.select.program' | message}}"
                 ng-required
-                ng-model="selectedProgram"
-                ng-options="program as program.name for program in programs"
-                >
+                ng-model="vm.selectedProgram"
+                ng-options="program as program.name for program in vm.programs">
             </select>
         </div>
-        <!--<div class="form-group">
-            <label for="status" openlmis-message="label.status"></label>
-            <div id="status"
-                ng-dropdown-multiselect="" 
-                options="statuses" 
-                selected-model="selectedStatuses" 
-                extra-settings="multiselectSettings">
-            </div>
-        </div>-->
         <div class="form-group">
-            <label for="startDate" openlmis-message="label.from"></label>
-            <openlmis-datepicker input-id="startDate" value="startDate"></openlmis-datepicker>
+            <label for="startDate">{{'label.from' | message}}</label>
+            <openlmis-datepicker input-id="startDate" value="vm.startDate"></openlmis-datepicker>
         </div>
         <div class="form-group">
-            <label for="endDate" openlmis-message="label.to"></label>
-            <openlmis-datepicker input-id="endDate" value="endDate"></openlmis-datepicker>
+            <label for="endDate">{{'label.to' | message}}</label>
+            <openlmis-datepicker input-id="endDate" value="vm.endDate"></openlmis-datepicker>
         </div>
         <div class="form-group">
-            <input id="searchButton" ng-click="search()"
-                class="btn btn-primary"
-                openlmis-message="button.search" type="button"/>
+            <label for="offlineSearch">{{'msg.requisition.view.offline' | message}}</label>
+            <input id="offlineSearch" type="checkbox"
+                ng-model="vm.searchOffline" ng-disabled="vm.offline"/>
+        </div>
+        <div class="form-group">
+            <button id="searchButton" ng-click="vm.search()"
+                class="btn btn-primary">
+                {{'button.search' | message}}
+            </button>
         </div>
     </form>
-    <div id="requisitionViewList" 
-        class="grid grid-requisition-list" 
-        ui-grid="gridOptions" 
-        ng-if="requisitionList.length"></div>
-    <div ng-if="error" class="alert is-info" openlmis-message="error" ng-show="error"></div>
+    <div class="requisition-search">
+        <table ng-if="vm.requisitionList.length">
+            <thead>
+            <tr>
+                <th>{{'program.header' | message}}</th>
+                <th>{{'option.value.facility.code' | message}}</th>
+                <th>{{'option.value.facility.name' | message}}</th>
+                <th>{{'label.period.start.date' | message}}</th>
+                <th>{{'label.period.end.date' | message}}</th>
+                <th>{{'label.date.submitted' | message}}</th>
+                <th>{{'label.status' | message}}</th>
+                <th>{{'requisition.type.emergency' | message}}</th>
+                <th>{{'msg.requisition.view.offline' | message}}</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr ng-repeat="requisition in vm.requisitionList" ng-click="vm.openRnr(requisition.id)">
+                <td>{{requisition.program.name}}</th>
+                <td>{{requisition.facility.code}}</th>
+                <td>{{requisition.facility.name}}</th>
+                <td>{{requisition.processingPeriod.startDate | date:'shortDate'}}</th>
+                <td>{{requisition.processingPeriod.endDate | date:'shortDate'}}</th>
+                <td>{{requisition.createdDate | date:'shortDate'}}</th>
+                <td>{{requisition.status}}</th>
+                <td class="col-emergency">
+                    <i ng-class="{'icon-ok': requisition.emergency}"></i>
+                </td>
+                <td class="col-emergency">
+                    <i ng-class="{'icon-ok': requisition.$searchedOffline}"></i>
+                </td>
+            </tr>
+            </tbody>
+        </table>
+        <div ng-if="vm.error" class="alert is-info" ng-show="vm.error">{{vm.error | message}}</div>
+    </div>
 </div>
