--- a/src/main/webapp/public/requisitions/init.html
+++ b/src/main/webapp/public/requisitions/init.html
@@ -8,12 +8,14 @@
         {{'label.myFacility'|message}}
         <input type="radio" ng-model="selectedType" ng-value="0" ng-change="loadFacilityData(selectedType);" />
       </label>
-      <label class="radio is-disabled">
+      <label class="radio">
         {{'label.supervised.Facility'|message}}
-        <input type="radio" ng-model="selectedType" ng-value="1" ng-change="loadFacilityData(selectedType);" disabled />        
+        <input type="radio" ng-model="selectedType" ng-value="1"
+               ng-change="loadFacilityData(selectedType);"
+               ng-disabled="supervisedFacilitiesDisabled"/>
       </label>
     </fieldset>
-    <div class="form-group">
+    <div class="form-group" ng-show="!selectedType">
       <label for="facilityName" openlmis-message="label.requisition.facilityName"></label>
       <select id="facilityName"
         ng-model="selectedFacilityId"
@@ -21,13 +23,33 @@
         placeholder="label.select.facility" >
       </select>
     </div>
-    <div class="form-group">
+    <div class="form-group" ng-show="!selectedType">
       <label for="programListMyFacility" openlmis-message="label.program"></label>
       <select
         id="programListMyFacility"
         ng-model="selectedProgram"
         ng-options="program as program.name for program in programs"
         placeholder="{{'label.select.program' | message}}" >
+      </select>
+    </div>
+    <div class="form-group" ng-show="selectedType">
+      <label for="programListSupervisedFacility" openlmis-message="label.program"></label>
+      <select
+        id="programListSupervisedFacility"
+        ng-change="loadFacilities(selectedProgram)"
+        ng-model="selectedProgram"
+        ng-options="program as program.name for program in programs"
+        placeholder="{{'label.select.program' | message}}" >
+      </select>
+    </div>
+    <div class="form-group" ng-show="selectedType">
+      <label for="supervisedFacilityName" openlmis-message="label.requisition.facilityName"></label>
+      <select
+        id="supervisedFacilityName"
+        ng-disabled="!selectedProgram"
+        ng-model="selectedFacilityId"
+        ng-options="facility.id as facility.name for facility in facilities | unique:'id'"
+        placeholder="{{'label.select.facility' | message}}" >
       </select>
     </div>
     <fieldset class="form-group">
