OLMIS-982: Made routes relative to index.html, not absolute

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,9 +13,9 @@
 <head>
   <meta charset="utf-8">
   <title openlmis-message="app.title"></title>
-  <link rel="icon" href="/favicon.ico" type="image/x-icon"/>
-  <link rel="stylesheet" href="/openlmis.css">
-  <script type="text/javascript" src="/openlmis.js"></script>
+  <link rel="icon" href="favicon.ico" type="image/x-icon"/>
+  <link rel="stylesheet" href="openlmis.css">
+  <script type="text/javascript" src="openlmis.js"></script>
 
 </head>
 <body >
