--- a/src/main/webapp/dashboard/header.html
+++ b/src/main/webapp/dashboard/header.html
@@ -1,6 +1,6 @@
 <div ng-controller="HeaderController">
   <div class="logo">
-    <img src="/images/logo.png"/>
+    <img src="images/logo.png"/>
 
     <h1 openlmis-message="label.app.header"></h1>
   </div>
