--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -10,22 +10,22 @@
   -->
 
 <html lang="en" ng-app="openlmis" manifest="manifest.appcache" xmlns="http://www.w3.org/1999/html">
-<head>
-  <meta charset="utf-8">
-  <title openlmis-message="app.title"></title>
-  <link rel="icon" href="favicon.ico" type="image/x-icon"/>
-  <link rel="stylesheet" href="openlmis.css">
-  <script type="text/javascript" src="openlmis.js"></script>
+  <head>
+    <meta charset="utf-8">
+    <title openlmis-message="app.title"></title>
+    <link rel="icon" href="favicon.ico" type="image/x-icon"/>
+    <link rel="stylesheet" href="openlmis.css">
+    <script type="text/javascript" src="openlmis.js"></script>
 
-</head>
-<body >
-<header ng-if="userIsAuthenticated">
-  <div ng-class="isOffline() ? 'offline-header' : 'online-header'" offline></div>
-  <div class="navbar">
-    <openlmis-navigation class="nav navbar-nav"></openlmis-navigation>
-    <openlmis-locale class="navbar-links navbar-right"></openlmis-locale>
-  </div>
-</header>
-<div ui-view></div>
-</body>
+  </head>
+  <body >
+    <header ng-if="userIsAuthenticated">
+      <offline ng-class="isOffline() ? 'offline-header' : 'online-header'"></offline>
+      <div class="navbar">
+        <openlmis-navigation class="nav navbar-nav"></openlmis-navigation>
+        <openlmis-locale class="navbar-links navbar-right"></openlmis-locale>
+      </div>
+    </header>
+    <div ui-view></div>
+  </body>
 </html>
