--- a/src/main/webapp/requisitions/requisition/full-supply.html
+++ b/src/main/webapp/requisitions/requisition/full-supply.html
@@ -7,10 +7,10 @@
 		</thead>
 		<tbody ng-repeat="(category, lineItems) in vm.categories">
 			<tr>
-			  <td class="productCategory" colspan="{{vm.columns.length}}">{{category}}</td>
+				<td class="productCategory" colspan="{{vm.columns.length}}">{{category}}</td>
 			</tr>
 			<tr ng-class="{'invalid-row': !vm.isLineItemValid(lineItem)}" ng-repeat="lineItem in lineItems">
-			  <td ng-repeat="column in vm.columns | orderBy : 'displayOrder'" product-grid-cell></td>
+				<td ng-repeat="column in vm.columns | orderBy : 'displayOrder'" product-grid-cell requisition="vm.requisition" column="column" line-item="lineItem"></td>
 			</tr>
 		</tbody>
 	</table>
